plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'com.google.gms.google-services'
    id "org.jetbrains.kotlin.kapt"
    id 'ly.img.android.sdk'
}

// Configure the PESDKPlugin
imglyConfig {
    pesdk {
        enabled true
        licencePath null
    }

    modules {
        // Add all the UI modules you are need
        include 'ui:core'
        include 'ui:text'
        include 'ui:focus'
        include 'ui:frame'
        include 'ui:brush'
        include 'ui:filter'
        include 'ui:camera'
        include 'ui:sticker'
        include 'ui:overlay'
        include 'ui:transform'
        include 'ui:adjustment'

        // Add the serializer if you need
        include 'backend:serializer'

        // Add asset packs if you need
        include 'assets:font-basic'
        include 'assets:frame-basic'
        include 'assets:filter-basic'
        include 'assets:overlay-basic'
        include 'assets:sticker-shapes'
        include 'assets:sticker-emoticons'
    }
}

android {
    compileSdk 34

    defaultConfig {
        applicationId "com.nuclavis.rospark"
        minSdk 26
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        defaultConfig {
            resConfigs "en", "fr", "es", "US"
        }

    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            matchingFallbacks = ['release']
        }
    
        enterprise {
            // blah blah
            matchingFallbacks = ['release']
        }
        debug {
            // blah blah
            matchingFallbacks = ['debug']
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    dataBinding {
        enabled = true
    }
    buildFeatures {
        dataBinding true
    }

    lintOptions {
        disable 'InvalidPackage'
        abortOnError false
        absolutePaths false
        lintConfig file('lint.xml')
    }

    testOptions {
        unitTests.includeAndroidResources  = true
        unitTests.returnDefaultValues = true
    }

    packagingOptions {
        jniLibs {
            useLegacyPackaging = true
        }
    }
}

tasks.withType(Test) {
   jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
   jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
   jvmArgs("--add-opens", "java.base/java.io=ALL-UNNAMED")
   jvmArgs("--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED")
}

dependencies {
    implementation 'com.google.devtools.ksp:symbol-processing-api:1.8.0-1.0.9'
    implementation 'com.google.android.play:review:2.0.1'
    implementation 'com.google.android.play:review-ktx:2.0.1'
    implementation 'com.google.guava:guava:28.2-android'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.8.5'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
    implementation 'com.github.wnameless:json-flattener:0.2.2'
    implementation 'dev.b3nedikt.restring:restring:5.1.4'
    implementation 'dev.b3nedikt.viewpump:viewpump:4.0.7'
    implementation 'dev.b3nedikt.reword:reword:4.0.1'
    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
    implementation 'com.github.onecode369:WYSIWYG:792199ffac'
    implementation 'com.intuit.sdp:sdp-android:1.1.0'
    implementation 'androidx.core:core-splashscreen:1.0.0'
    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.activity:activity:1.7.0'
    implementation 'androidx.appcompat:appcompat:1.5.1'
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.facebook.android:facebook-android-sdk:15.2.0'
    implementation 'com.miteksystems.misnap:document:5.4.0'
    implementation files('libs/visitor-client-v1.1.aar')
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    testImplementation 'androidx.arch.core:core-testing:2.1.0'
    testImplementation 'org.robolectric:robolectric:4.11'
    implementation 'junit:junit:4.12'
    implementation 'org.powermock:powermock-api-mockito2:2.0.4'
    implementation 'org.powermock:powermock-module-junit4:2.0.4'
    implementation 'androidx.biometric:biometric:1.0.1'
    implementation platform('com.google.firebase:firebase-bom:31.1.1')
    implementation 'com.google.firebase:firebase-messaging-ktx'
    implementation 'com.google.firebase:firebase-analytics-ktx'
    implementation("com.google.android.gms:play-services-fitness:21.1.0")
    implementation("com.google.android.gms:play-services-auth:20.4.1")
    implementation("androidx.health.connect:connect-client:1.1.0-alpha06")
    //implementation project(':unityLibrary')
    //implementation fileTree(dir: project(':unityLibrary').getProjectDir().toString() + ('\\libs'), include: ['*.jar'])
}